query_log on template

--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -27,7 +27,7 @@ options {
 	forward <%= @forward %>;
 <%- end -%>
 <%- if @query_log -%>
-	query_log <%= @query_log %>;
+	querylog <%= @query_log %>;
 <%- end -%>
 <%- if @transfers_in -%>
 	transfers-in <%= @transfers_in %>;
