adds ixfr-from-differences

--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -32,6 +32,9 @@ options {
 <%- if @request_ixfr -%>
 	request-ixfr <%= @request_ixfr %>;
 <%- end -%>
+<%- if @ixfr_from_differences -%>
+	ixfr-from-differences <%= @ixfr_from_differences %>;
+<%- end -%>
 <%- if @serial_query_rate -%>
 	serial-query-rate <%= @serial_query_rate %>;
 <%- end -%>
