Add geoip-directory support

--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -54,6 +54,9 @@ options {
 <%- if @check_names_type != '' and @check_names_handling != '' -%>
     check-names <%= @check_names_type %> <%= @check_names_handling %>;
 <%- end -%>
+<%- if @geoip_directory and @geoip_directory != '' -%>
+    geoip-directory "@geoip_directory";
+<%- end -%>
 };
 <%- if @include_local -%>
 
