ACL geoip support

--- a/templates/acl.erb
+++ b/templates/acl.erb
@@ -3,4 +3,9 @@ acl <%= @name %> {
 <%- Array(@addresses).each do |address| -%>
 	<%= address %>;
 <%- end -%>
+<%- if @geoip_type and @geoip_location and @geoip_type == 'city' -%>
+    geoip @geoip_type "@geoip_location";
+<%- else if @geoip_type and @geoip_location -%>
+    geoip @geoip_type @geoip_location;
+<%- end -%>
 };
