--- a/templates/acl.erb
+++ b/templates/acl.erb
@@ -4,8 +4,8 @@ acl <%= @name %> {
 	<%= address %>;
 <%- end -%>
 <%- if @geoip_type and @geoip_location and @geoip_type == 'city' -%>
-    geoip @geoip_type "@geoip_location";
+    geoip <%= @geoip_type %> "<%= @geoip_location %>";
 <%- else if @geoip_type and @geoip_location -%>
-    geoip @geoip_type @geoip_location;
+    geoip <%= @geoip_type %> <%= @geoip_location %>;
 <%- end -%>
-}
+};
