What sort of language doesn't have else?

--- a/templates/acl.erb
+++ b/templates/acl.erb
@@ -10,7 +10,8 @@ acl <%= @name %> {
     <%- Array(@geoip_location).each do |geo_loc| -%>
     geoip <%= @geoip_type %> <%= geo_loc %>;
     <%- end %->
-  <%- else -%>
+  <%- end -%>
+  <%- if @geoip_location.is_a?(String) -%>
     geoip <%= @geoip_type %> <%= @geoip_location %>;
   <%- end -%>
 <%- end -%>
